
Change Log Update (00.00.60)
* 2016-11-18
+ Finished Legacy .MNU to new .YAML menu file conversion utility
+ Also made some correction to the legacy menu loading code.
+ Next step is to replace the menu loading code to use the new yaml files.
+ Some minor changes to the menu option names in the yaml file.
+ Updated unit tests for new config file version, included needed dao file.
+ Added check if and exit if no legacy .MNU files exist to display a message and exit
+ Added Fix in Telnet_Decoder for NAWS, add a proper casting for int conversion.

Change Log Update (00.00.59)
* 2016-11-16
+ Added File Versions to all YAML configuration files
  Config, Menus, Text Prompts
+ Current Asserts on Version ms-matches, need to eventually work out
  a cleaner shutdown process.

Change Log Update (00.00.58)
* 2016-11-16
+ Rename Legacy Menu objects with Compat
+ Create New Data Access Object (DAO) and classes for 
  reading/writing menu's in YAML files.
+ Starting on Legacy to new YAML XRM Menu format then plan 
  to update the loading code to start using the new menu files.
+ Also added File Versions to all YAML configuration files.

Change Log Update (00.00.57)
* 2016-11-15
+ Add new MenuDao and Menu class for YAML menu files.  Rename previous to compat to 
  Mark data for the original obv/2 data sets.  
+ Started Menu converter to convert legacy menus to new YAML files so we can extend
  Menus in a new format and add new features.

Change Log Update (00.00.56)
* 2016-11-10
+ Refactored Menu System, decoupled and split core from the state 
  into a base class. This allows other dynamic systems to use it's 
  features for lightbars with callback command execution specific
  to each interface.

Change Log Update (00.00.55)
* 2016-11-08
+ Added New config variables to Config_DAO for read/write to yaml file.
+ Added session disconnect to matrix G command to test logoff.

Change Log Update (00.00.54)
* 2016-11-06